kubernetes/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  labels:
    name: web
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:636401200746:certificate/6bee8f23-937e-489a-bc40-8a08873cb5ea
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - host: web.leemhoon00.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web
                port:
                  number: 80
